# rag-practice

./: .gitignore  1-semantichunking.ipynb  hybridstrategies.ipynb  langchain_intro.txt  main.py  pineconeipynb.ipynb  pyproject.toml  requirements.txt
0-Dataingestparsing/: 1-dataingestion.ipynb  2-dataparsingpdf.ipynb  csvexcelparsing.ipynb  jsonparsing.ipynb  sqldatabase.ipynb
0-Dataingestparsing/data/databases/: company.db
0-Dataingestparsing/data/structured_files/: inventory.xlsx
0-Dataingestparsing/data/text_files/: python_intro.txt  python_intro1.txt
1-vectorEmbeddingsandDatabases/: embeddings.ipynb
2-vector_store/: 1-chromadb.ipynb  2-faiss.ipynb
2-vector_store/chroma_db/: chroma.sqlite3
2-vector_store/faiss_index/: index.faiss  index.pkl
