[project]
name = "ragspracticeudemy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.5.4",
    "faiss-cpu>=1.7.4",
    "ipykernel>=7.2.0",
    "jq>=1.11.0",
    "langchain==0.2.3",
    "langchain-community==0.2.3",
    "langchain-core==0.2.6",
    "langchain-groq==0.1.4",
    "langchain-huggingface==0.0.3",
    "matplotlib>=3.8.0",
    "onnxruntime==1.17.0",
    "openpyxl>=3.1.2",
    "pandas>=2.2.0",
    "protobuf==3.20.3",
    "pymupdf>=1.27.1",
    "pypdf>=4.2.0",
    "python-dotenv>=1.0.1",
    "sentence-transformers>=2.6.0",
    "tiktoken>=0.7.0",
]
